# erebos-webapp

./: .gitignore  CHANGELOG.md  Makefile  erebos-webapp.cabal
src/: JavaScript.hs  Main.hs  Version.hs  WebSocket.hs
src/JavaScript/: Element.hs  Event.hs  Node.hs  Val.hs  Window.hs
src/Storage/: Cache.hs  IndexedDB.hs  WatchList.hs
src/Version/: Git.hs
