cabal-version:      3.0
name:               erebos-webapp
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://erebosprotocol.net
license:            GPL-3.0-only
license-file:       LICENSE
author:             Roman Smrž
maintainer:         roman.smrz@seznam.cz
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable erebos-webapp
    import:           warnings
    ghc-options:
        -no-hs-main
        -optl-mexec-model=reactor
        -optl-Wl,--export=hs_init,--export=setup
        -fdefer-typed-holes

    extra-libraries: blake2b-ref

    main-is:          Main.hs
    other-modules:
        JavaScript
        WebSocket

    default-extensions:
        DefaultSignatures
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiWayIf
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TypeOperators
        TupleSections
        TypeApplications
        TypeFamilies
        TypeFamilyDependencies

    -- other-extensions:
    build-depends:
        base ^>= { 4.21 },
        bytestring ^>= { 0.12 },
        erebos ^>= { 0.1.8 },
        ghc-experimental ^>= { 9.1201 },
        mtl ^>= { 2.3 },
        text ^>= { 2.1 },

    hs-source-dirs:   src
    default-language: GHC2021
